[project]
name = "Bermesio"
version = "0.1.0"
description = "Blender Production Environment Manager"
authors = [
    {name = "Yongqing Ye", email = "avatar.ye@gmail.com"},
]
dependencies = [
    "PyQt6>=6.6.1",
    "packaging>=23.2",
    "virtualenv>=20.25.0",
    "setuptools>=69.0.3",
    "pytest>=7.4.3",
    "dill>=0.3.7",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
